# SOCI_TEST

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  soci-download.cmake  soci.cmake  vcpkg.json
sqlite-amalgamation/: CMakeLists.txt
